--- a/index.html
+++ b/index.html
@@ -1,23 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            My PortFolio
-        </title>
 
-    </head>
-    <body>
-       <h1>Raghav Goyal</h1>
-       <a href="index.html">My Projects</a>
-       <a href="about me.html">Get to know me</a>
-       <h2>These are some of the projects designed by me:</h2>
-       <p>All of these games use p5.js, p5.play.js and matter.js,javascript libraries</p>
-       <a href = "https://whitehatjr.github.io/PiratesInvasion">
-        <img src = "PirateInvasion_Thumbnail_0.jpg"width = "500" height = "300"/>
-       </a>
-       <p>Pirate  Invasion Game</p>
-       <a href = "#"><img src = "Icons/fb.png"width = "50" height = "50"/></a>
-       <a href = "#"><img src = "Icons/insta.png"width = "50" height = "50"/></a>
-       <a href = "#"><img src = "Icons/youtube.png"width = "50" height = "50"/></a>
-    </body>
+<head>
+    <title>
+        My PortFolio
+    </title>
+
+    <link rel="stylesheet" href="style.css" type="text/css" />
+
+
+</head>
+
+<body>
+    <div class="header">
+        <h1>Raghav Goyal</h1>
+        <div class="menu">
+            <a href="index.html">My Projects</a>
+            <a href="about me.html">Get to know me</a>
+        </div>
+    </div>
+    <h2>These are some of the projects designed by me:</h2>
+    <p>All of these games use p5.js, p5.play.js and matter.js,javascript libraries</p>
+    <div class="grid">
+        <div>
+            <a href="https://whitehatjr.github.io/PiratesInvasion">
+                <img src="PirateInvasion_Thumbnail_0.jpg" width="400" height="300" />
+            </a>
+            <p>Pirate Invasion Game</p>
+
+        </div>
+
+        <div>
+
+            <a href="https://whitehatjr.github.io/PiratesInvasion">
+                <img src="PirateInvasion_Thumbnail_0.jpg" width="400" height="300" />
+            </a>
+            <p>Car racing Game</p>
+        </div>
+
+        <div>
+            <a href="https://whitehatjr.github.io/PiratesInvasion">
+                <img src="PirateInvasion_Thumbnail_0.jpg" width=" 400" height="300" />
+            </a>
+            <p>Car racing Game</p>
+        </div>
+        <div>
+            <a href="https://whitehatjr.github.io/PiratesInvasion">
+                <img src="PirateInvasion_Thumbnail_0.jpg" width="400" height="300" />
+            </a>
+            <p>Car racing Game</p>
+        </div>
+
+       
+    </div>
+
+    <div class = "footer">
+        <a href="#"><img src="Icons/fb.png" width="50" height="50" /></a>
+        <a href="#"><img src="Icons/insta.png" width="50" height="50" /></a>
+        <a href="#"><img src="Icons/youtube.png" width="50" height="50" /></a>
+    </div>
+</body>
+
 </html>
