--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <
+    
     <div class="header">
         <h1>Raghav Goyal</h1>
         <div class="menu">
@@ -23,31 +23,31 @@
     <h2>These are some of the projects designed by me:</h2>
     <p>All of these games use p5.js, p5.play.js and matter.js,javascript libraries</p>
     <div class="grid">
-        <div>
+        <div class="item">
             <a href="https://whitehatjr.github.io/PiratesInvasion">
-                <img src="PirateInvasion_Thumbnail_0.jpg" width="400" height="300" />
+                <img src="PirateInvasion_Thumbnail_0.jpg" width="440" height="300" />
             </a>
             <p>Pirate Invasion Game</p>
 
         </div>
 
-        <div>
+        <div class="item">
 
-            <a href="https://whitehatjr.github.io/PiratesInvasion">
-                <img src="PirateInvasion_Thumbnail_0.jpg" width="400" height="300" />
+            <a href="https://goyal-raghav.github.io/Car-Race-2D.github.io/">
+                <img src="Speed Race.jpg" width="500" height="300" />
             </a>
             <p>Car racing Game</p>
         </div>
 
-        <div>
-            <a href="https://whitehatjr.github.io/PiratesInvasion">
-                <img src="PirateInvasion_Thumbnail_0.jpg" width=" 400" height="300" />
+        <div class="item">
+            <a href="https://goyal-raghav.github.io/Feed-the-Bunny.github.io/">
+                <img src="Feed the Bunny.jpg" width=" 480" height="300" />
             </a>
-            <p>Car racing Game</p>
+            <p>Feed the Bunny</p>
         </div>
-        <div>
+        <div class="item">
             <a href="https://whitehatjr.github.io/PiratesInvasion">
-                <img src="PirateInvasion_Thumbnail_0.jpg" width="400" height="300" />
+                <img src="PirateInvasion_Thumbnail_0.jpg" width="300" height="300" />
             </a>
             <p>Car racing Game</p>
         </div>
